[package]
name = "linkorgasm"
version = "0.2.0"
authors = ["Jasen Borisov <jamadazi@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.12", default-features = false, features = [ "termion-backend" ] }
hashbrown = "0.5.0"
